some work on users api
